Alteration script and html

--- a/PAM/index.html
+++ b/PAM/index.html
@@ -11,7 +11,12 @@
     <div class="container">
         <button onclick="clicado()" id="button1">Clique aqui!</button>
 
-        <p id="paragrafo"></p>
+        <div class="center-text">
+            <p id="paragrafo"></p>
+            <p></p>
+            <p class="elemento"></p>
+        </div>
+        
     
         <form id="meuForm">
             <div>
