Alteration script and html

--- a/PAM/index.html
+++ b/PAM/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <button onclick="clicado()" id="button1">Clique aqui!</button>
+        <button onclick="clicado()" id="button1">Clique aqui!</button><br><br>
 
-        <div class="center-text">
-            <p id="paragrafo"></p>
-            <p></p>
-            <p class="elemento"></p>
-        </div>
+            <p id="outputById"></p>
+            <div class="outputByTagName"></div>
+            <div class="outputByClassName"></div>
+            <div class="outputByQuerySelector"></div>
+            <div class="outputByQuerySelectorAll"></div>
+            <br>
         
     
         <form id="meuForm">
